Reorganized project structure, refactored notebook for readability, added data cleaning functions, markdown explanations, and README

--- a/notebooks/GooglePlayStore.ipynb
+++ b/notebooks/GooglePlayStore.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -36,44 +36,45 @@
      "output_type": "stream",
      "text": [
       "Total number of apps in the dataset =  10358\n",
-      "                                                 App            Category  \\\n",
-      "5938       Fitness Dance for Zum.ba Workout Exercise  HEALTH_AND_FITNESS   \n",
-      "4574  S Photo Editor - Collage Maker , Photo Collage         PHOTOGRAPHY   \n",
-      "9835                     Blagues et Histoires Drôles              FAMILY   \n",
-      "6718                                      Bullshite!                GAME   \n",
-      "656        Titanic App - Feminist Dating Application              DATING   \n",
+      "                                 App            Category  Rating Reviews  \\\n",
+      "3726                BaBe - Read News  NEWS_AND_MAGAZINES     4.3  355921   \n",
+      "8396                 Daily Horoscope           LIFESTYLE     4.7  407589   \n",
+      "4328            Messenger L SMS, MMS     PERSONALIZATION     4.0    6263   \n",
+      "10283    Bank FD Interest Calculator             FINANCE     4.5     166   \n",
+      "597    Luxy Pro- Elite Dating Single              DATING     3.9     742   \n",
       "\n",
-      "      Rating Reviews  Size      Installs  Type Price Content Rating  \\\n",
-      "5938     4.2     287   12M       50,000+  Free     0       Everyone   \n",
-      "4574     4.4  972574   45M  100,000,000+  Free     0       Everyone   \n",
-      "9835     3.9     859  5.3M      100,000+  Free     0           Teen   \n",
-      "6718     2.8      48   13M       10,000+  Free     0           Teen   \n",
-      "656      4.5     120   10M          500+  Free     0     Mature 17+   \n",
+      "                     Size     Installs  Type Price Content Rating  \\\n",
+      "3726                  17M  10,000,000+  Free     0           Teen   \n",
+      "8396   Varies with device  10,000,000+  Free     0       Everyone   \n",
+      "4328                  20M     500,000+  Free     0       Everyone   \n",
+      "10283                3.5M      10,000+  Free     0       Everyone   \n",
+      "597                   26M      50,000+  Free     0     Mature 17+   \n",
       "\n",
-      "                Genres       Last Updated Current Ver Android Ver  \n",
-      "5938  Health & Fitness      July 30, 2018         1.8  4.2 and up  \n",
-      "4574       Photography     August 3, 2018        2.31  4.1 and up  \n",
-      "9835     Entertainment  February 18, 2017       0.0.2  4.1 and up  \n",
-      "6718              Card     April 10, 2016       1.0.1  4.1 and up  \n",
-      "656             Dating     August 4, 2018    1.5-beta  5.0 and up  \n"
+      "                 Genres     Last Updated         Current Ver  \\\n",
+      "3726   News & Magazines   August 1, 2018               9.1.4   \n",
+      "8396          Lifestyle    July 20, 2018  Varies with device   \n",
+      "4328    Personalization    July 12, 2018                7.46   \n",
+      "10283           Finance  January 7, 2018                 2.5   \n",
+      "597              Dating    April 7, 2018         5.3.3.13289   \n",
+      "\n",
+      "              Android Ver  \n",
+      "3726           4.0 and up  \n",
+      "8396   Varies with device  \n",
+      "4328           2.3 and up  \n",
+      "10283        4.0.3 and up  \n",
+      "597          4.0.3 and up  \n"
      ]
     }
    ],
    "source": [
-    "# Read in dataset\n",
     "import pandas as pd\n",
-    "apps_with_duplicates = pd.read_csv(\"datasets/apps.csv\")\n",
+    "apps_with_duplicates = pd.read_csv(\"../data/apps.csv\")\n",
     "\n",
-    "# Drop duplicates from apps_with_duplicates\n",
     "apps = apps_with_duplicates.drop_duplicates()\n",
     "\n",
-    "# Print the total number of apps\n",
     "print('Total number of apps in the dataset = ', len(apps))\n",
     "\n",
-    "# Have a look at a random sample of 5 rows\n",
-    "print(apps.sample(5))\n",
-    "\n",
-    "# This is a comment I am writing to show a git commit"
+    "print(apps.sample(5))"
    ]
   },
   {
@@ -83,12 +84,12 @@
    "source": [
     "2. Data Cleaning\n",
     "\n",
-    "It looks like some entries in the columns like Installs and Price have special characters due to the way the numbers have been represented. Since we need these columns to be pureley numeric in order to do calculations, I'm going to clean the data to make it easier to use.\n"
+    "Some entries in the columns like Installs and Price have special characters due to the way the numbers have been represented but these columns have to be purely numeric in order to do calculations.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +155,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/8v/c61zkvrs0f933p0hmnj5hv040000gn/T/ipykernel_44887/3402178148.py:11: SettingWithCopyWarning: \n",
+      "/var/folders/8v/c61zkvrs0f933p0hmnj5hv040000gn/T/ipykernel_57645/3072815677.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -164,19 +165,16 @@
     }
    ],
    "source": [
-    "# List of characters to remove\n",
+    "# Characters to remove\n",
     "chars_to_remove = [\"+\",\",\",\"$\"]\n",
-    "# List of column names to clean\n",
+    "# Column names to clean\n",
     "cols_to_clean = [\"Installs\",\"Price\"]\n",
     "\n",
-    "# Loop for each column in cols_to_clean\n",
+    "\n",
     "for col in cols_to_clean:\n",
-    "    # Loop for each char in chars_to_remove\n",
     "    for char in chars_to_remove:\n",
-    "        # Replace the character with an empty string\n",
     "        apps[col] = apps[col].apply(lambda x: x.replace(char, ''))\n",
     "        \n",
-    "# Print a summary of the apps dataframe\n",
     "print(apps.info)"
    ]
   },
@@ -198,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +206,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\n\u001b[1;32m      2\u001b[0m plotly\u001b[38;5;241m.\u001b[39moffline\u001b[38;5;241m.\u001b[39minit_notebook_mode(connected\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgraph_objs\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mgo\u001b[39;00m\n",
+      "Input \u001b[0;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\n\u001b[1;32m      2\u001b[0m plotly\u001b[38;5;241m.\u001b[39moffline\u001b[38;5;241m.\u001b[39minit_notebook_mode(connected\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgraph_objs\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mgo\u001b[39;00m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'plotly'"
      ]
     }
@@ -218,11 +216,11 @@
     "plotly.offline.init_notebook_mode(connected=True)\n",
     "import plotly.graph_objs as go\n",
     "\n",
-    "# Print the total number of unique categories\n",
+    "# Unique categories\n",
     "num_categories = len(apps['Category'].unique())\n",
     "print('Number of categories = ', num_categories)\n",
     "\n",
-    "# Count the number of apps in each 'Category'. \n",
+    "# Number of apps in each 'Category'. \n",
     "num_apps_in_category = apps['Category'].value_counts()\n",
     "\n",
     "# Sort num_apps_in_category in descending order based on the count of apps in each category\n",
@@ -11507,12 +11505,11 @@
     "avg_app_rating = apps['Rating'].mean()\n",
     "print('Average app rating = ', avg_app_rating)\n",
     "\n",
-    "# Distribution of apps according to their ratings\n",
+    "# Distribution of apps according to ratings\n",
     "data = [go.Histogram(\n",
     "        x = apps['Rating']\n",
     ")]\n",
     "\n",
-    "# Vertical dashed line to indicate the average app rating\n",
     "layout = {'shapes': [{\n",
     "              'type' :'line',\n",
     "              'x0': avg_app_rating,\n",
@@ -11585,16 +11582,12 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "# Select rows where both 'Rating' and 'Size' values are present\n",
     "apps_with_size_and_rating_present = apps[(~apps['Rating'].isnull()) & (~apps['Size'].isnull())]\n",
     "\n",
-    "# Subset for categories with at least 250 apps\n",
     "large_categories = apps_with_size_and_rating_present.groupby(['Category']).filter(lambda x: len(x) >= 250)\n",
     "\n",
-    "# Plot size vs. rating\n",
     "plt1 = sns.jointplot(x = large_categories['Size'], y = large_categories['Rating'])\n",
     "\n",
-    "# Select apps whose 'Type' is 'Paid'\n",
     "paid_apps = apps_with_size_and_rating_present[apps_with_size_and_rating_present['Type'] == 'Paid']\n",
     "\n",
     "# Plot price vs. rating\n",
@@ -11650,16 +11643,16 @@
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(15, 8)\n",
     "\n",
-    "# Select a few popular app categories\n",
+    "# Popular app categories\n",
     "popular_app_cats = apps[apps.Category.isin(['GAME', 'FAMILY', 'PHOTOGRAPHY',\n",
     "                                            'MEDICAL', 'TOOLS', 'FINANCE',\n",
     "                                            'LIFESTYLE','BUSINESS'])]\n",
     "\n",
-    "# Examine the price trend by plotting Price vs Category\n",
+    "# Price vs Category\n",
     "ax = sns.stripplot(x = popular_app_cats['Price'], y = popular_app_cats['Category'], jitter=True, linewidth=1)\n",
     "ax.set_title('App pricing trend across categories')\n",
     "\n",
-    "# Apps whose Price is greater than 200\n",
+    "# Apps whose price is greater than 200\n",
     "# apps_above_200 = popular_app_cats[popular_app_cats['Price'] > 200]\n",
     "# apps_above_200[['Category', 'App', 'Price']]"
    ]
@@ -22926,13 +22919,13 @@
    ],
    "source": [
     "trace0 = go.Box(\n",
-    "    # Data for paid apps\n",
+    "    # paid apps\n",
     "    y = apps[apps['Type'] == 'Paid']['Installs'],\n",
     "    name = 'Paid'\n",
     ")\n",
     "\n",
     "trace1 = go.Box(\n",
-    "    # Data for free apps\n",
+    "    # free apps\n",
     "    y = apps[apps['Type'] == 'Free']['Installs'],\n",
     "    name = 'Free'\n",
     ")\n",
@@ -22944,7 +22937,6 @@
     "                autorange = True)\n",
     ")\n",
     "\n",
-    "# Add trace0 and trace1 to a list\n",
     "data = [trace0, trace1]\n",
     "plotly.offline.iplot({'data': data, 'layout': layout})"
    ]
@@ -22994,10 +22986,8 @@
     }
    ],
    "source": [
-    "# Load user_reviews.csv\n",
     "reviews_df = pd.read_csv('datasets/user_reviews.csv')\n",
     "\n",
-    "# Join the two dataframes\n",
     "merged_df = pd.merge(apps, reviews_df, on = \"App\")\n",
     "\n",
     "# # Drop NA values from Sentiment and Review columns\n",
